--- a/energy.html
+++ b/energy.html
@@ -78,7 +78,7 @@
                 <div>
                   <h2 class="underline left">Accelerate digital transformation in your oil and gas enterprise</h2>
                   <p class="large">
-                    Oil and gas companies must be able to optimize capital projects to drive net-zero operations, build resilience and optimize the value chain for maximum business performance.
+                    Oil and gas companies must be able to optimize capital projects to drive net zero operations, build resilience and optimize the value chain for maximum business performance.
                   </p>
                 </div>
               </div>
@@ -98,7 +98,7 @@
                     </div>
                     <div class="pulse-dot competency" data-sidebar="competency">
                       <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
-                      <div class="tooltip">2050 Net-Zero</div>
+                      <div class="tooltip">2050 Net Zero</div>
                     </div>
                   </div>
                 </div>
@@ -174,7 +174,7 @@
           </p>
 
           <p class="white">
-            AVEVA helps you to manage performance in real time to optimize operations. With edge-to-enterprise visibility, you can maximize profitability as business conditions change through smarter operational insights and faster time-to-decision.
+            AVEVA helps you to manage performance in real-time to optimize operations. With edge-to-enterprise visibility, you can maximize profitability as business conditions change through smarter operational insights and faster time-to-decision.
           </p>
         </div>
 
@@ -268,7 +268,7 @@
           </div>
 
           <h4>
-            Achieve Net-Zero by 2050 and remain competitive despite mounting market pressures
+            Achieve Net Zero by 2050 and remain competitive despite mounting market pressures
           </h4>
 
           <p class="white">
@@ -387,7 +387,7 @@
                 Learn why prescriptive actions are required to realize the expected value of predictive alerts.
               </p>
             </div>
-            <a class="button" href="https://www.aveva.com/en/perspectives/blog/why-prescriptive-actions-are-required-to-realize-the-expected-value-of-predictive-alerts/" target="_blank">Read the Blog </a>
+            <a class="button" href="https://www.aveva.com/en/perspectives/blog/why-prescriptive-actions-are-required-to-realize-the-expected-value-of-predictive-alerts/" target="_blank">Read the Blog</a>
           </div>
 
           <div class="bottom">
@@ -462,5 +462,10 @@
     <script src="assets/js/match-height.js"></script>
     <script src="assets/js/la-custom.js"></script>
     <script src="assets/js/sidebar.js"></script>
+    <script>
+      jQuery(document).ready(function ($) {
+        $.cookie("last-page", "nothome", { path: '/', expires: 1 });
+      });
+    </script>
   </body>
 </html>
