--- a/power.html
+++ b/power.html
@@ -68,7 +68,7 @@
           </p>
         </div>
       </div>
-      <div class="scenes-wrapper chemicals pull-up">
+      <div class="scenes-wrapper chemicals power pull-up">
         <p class="center scenes-label fade">Choose your scene:</p>
 
         <div class="scenes col-wrapper">
@@ -184,7 +184,7 @@
               <!--            TODO-->
 
               <p class="slate">
-                Learn how leading power company DVC is using new tools and digital assets to deliver major efficiencies in operation and maintenance.
+                See how leading power company DVC is using new tools and digital assets to deliver major efficiencies in operation and maintenance.
               </p>
             </div>
           </div>
@@ -229,7 +229,7 @@
               <!--            TODO-->
 
               <p class="slate">
-                Learn how the UK's National Grid uses AVEVA's eDNA Historian to manage and analyze vast amounts of  data.
+                Learn how Southern Company uses its Digital Twin to provide data access and visualization for geographically dispersed generation assets
               </p>
             </div>
           </div>
@@ -244,7 +244,7 @@
                 See how AVEVA Predictive Analytics turns data into actionable insight to help avoid equipment failure and maintain machines at optimal performance.
               </p>
             </div>
-            <a class="button" href="https://www.aveva.com/en/industries/power-utilities/" target="_blank">Get the Infographics</a>
+            <a class="button" href="https://sw.aveva.com/campaigns/pisystem-apm-power-infographic" target="_blank">Get the Infographic</a>
           </div>
         </div>
       </div>
@@ -279,7 +279,7 @@
                 Learn how to prepare operators for a sustainable power industry.
               </p>
             </div>
-            <a class="button" href="https://view-su1.highspot.com/viewer/609da7e38060b555164918f3" target="_blank">Get the eBook</a>
+            <a class="button" href="https://sw.aveva.com/campaigns/continuous-improvement-process-for-power" target="_blank">Get the eBook</a>
           </div>
 
           <div class="bottom">
@@ -289,7 +289,7 @@
               </div>
 
               <p class="slate">
-                See how APS upskills a dispersed workforce with cloud-based operator training.
+                See how Arizona Public Service upskills a dispersed workforce with cloud-based operator training.
               </p>
             </div>
             <a class="button button-inverted" href="https://www.aveva.com/en/perspectives/success-stories/arizona-public-service/" target="_blank">Read the Case Study</a>
@@ -318,13 +318,16 @@
 
         <div class="white-section">
           <div class="top">
-            <div class="sidebar-video-wrapper">
-              <!--            TODO-->
+            <div class="icon-wrapper">
+              <div class="icon">
+                <img alt="" src="assets/images/chemicals-plant-agility-top.svg">
+              </div>
 
               <p class="slate">
                 See how Duke Energy centrally monitors power generation assets with predictive analytics software.
               </p>
             </div>
+            <a class="button" href="https://www.aveva.com/en/perspectives/success-stories/duke-energy/" target="_blank">Read Success Story</a>
           </div>
 
           <div class="bottom">
@@ -385,7 +388,7 @@
                 See how AVEVA APC offers a unique approach to combustion optimization.
               </p>
             </div>
-            <a class="button button-inverted" href="https://view-su1.highspot.com/viewer/609dc5cb0c38ef552a159ba8" target="_blank">Learn More</a>
+            <a class="button button-inverted" href="https://www.aveva.com/en/perspectives/campaigns/apc-for-power/" target="_blank">Learn More</a>
           </div>
         </div>
       </div>
@@ -430,7 +433,7 @@
                 Discover how to create a learning culture in your power plant.
               </p>
             </div>
-            <a class="button button-inverted" href="https://view-su1.highspot.com/viewer/609da7e38060b555164918f3" target="_blank">Read the eBook</a>
+            <a class="button button-inverted" href="https://sw.aveva.com/campaigns/continuous-improvement-process-for-power" target="_blank">Read the eBook</a>
           </div>
         </div>
       </div>
@@ -443,5 +446,10 @@
     <script src="assets/js/new-scenes.js"></script>
     <script src="assets/js/match-height.js"></script>
     <script src="assets/js/sidebar.js"></script>
+    <script>
+      jQuery(document).ready(function ($) {
+        $.cookie("last-page", "nothome", { path: '/', expires: 1 });
+      });
+    </script>
   </body>
 </html>
