--- a/chemicals.html
+++ b/chemicals.html
@@ -82,7 +82,7 @@
                 </div>
               </div>
               <div class="hide-on-level">
-                <div class="video-wrapper">
+                <div class="video-wrapper" style="left:0px;">
                   <video loop muted autoplay playsinline class="video">
                     <source src="assets/videos/AVEVA_chemical_enterprise.webm" type="video/webm">
                   </video>
@@ -198,7 +198,7 @@
               </div>
 
               <p class="slate">
-                Learn about Eastman's digital transformation program which enables the teams's circular engineering strategy.
+                Learn about Eastman Chemicals' digital transformation program which enables the team's circular engineering strategy.
               </p>
             </div>
             <a class="button button-inverted" href="https://www.aveva.com/en/perspectives/success-stories/eastman-chemical/" target="_blank">Read the Case Study</a>
@@ -231,7 +231,7 @@
               <!--            TODO-->
 
               <p class="slate">
-                Watch how LNS helps chemical companies use the right data for better decision making
+                Watch how LNS helps chemical companies use the right data for better decision-making.
               </p>
             </div>
           </div>
@@ -280,9 +280,13 @@
                   <img src="assets/images/video-preview.jpg" />
                   <div class="fitb-pop">
                     <script src="https://fast.wistia.com/embed/medias/h5vrysnblc.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_h5vrysnblc videoFoam=true" style="height:100%;position:relative;width:100%"><div class="wistia_swatch" style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;"><img src="https://fast.wistia.com/embed/medias/h5vrysnblc/swatch" style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt="" aria-hidden="true" onload="this.parentNode.style.opacity=1;" /></div></div></div></div>
+                    <div class="fitb-close"><img alt="" src="assets/images/close.svg"></div>
                   </div>
                 </div>
               </div>
+              <p class="slate">
+                Watch how AVEVA XR Training tools improve competency, safety, and agililty.
+              </p>
             </div>
           </div>
 
@@ -377,6 +381,7 @@
                   <img src="assets/images/video-preview.jpg" />
                   <div class="fitb-pop">
                     <script src="https://fast.wistia.com/embed/medias/q85frbsnvl.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_q85frbsnvl videoFoam=true" style="height:100%;position:relative;width:100%"><div class="wistia_swatch" style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;"><img src="https://fast.wistia.com/embed/medias/q85frbsnvl/swatch" style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt="" aria-hidden="true" onload="this.parentNode.style.opacity=1;" /></div></div></div></div>
+                    <div class="fitb-close"><img alt="" src="assets/images/close.svg"></div>
                   </div>
                 </div>
               </div>
@@ -453,10 +458,16 @@
 
 
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-migrate-3.0.0.min.js"></script>
     <script src="assets/js/new-scenes.js"></script>
     <script src="assets/js/match-height.js"></script>
     <script src="assets/js/la-custom.js"></script>
     <script src="assets/js/sidebar.js"></script>
+    <script>
+      jQuery(document).ready(function ($) {
+        $.cookie("last-page", "nothome", { path: '/', expires: 1 });
+      });
+    </script>
   </body>
 </html>
