--- a/consumer-products.html
+++ b/consumer-products.html
@@ -38,7 +38,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/new-style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/la-style.css">
 
-    <title>Aveva | Consumer Products</title>
+    <title>Aveva | Consumer Packaged Goods</title>
   </head>
   <body class="industry">
     <div class="nav top-nav">
@@ -47,7 +47,7 @@
           <a class="nav-link dark" href="index.html">Digital Factory</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link dark active" href="consumer-products.html">Consumer Products</a>
+          <a class="nav-link dark active" href="consumer-products.html">Consumer Packaged Goods</a>
         </li>
         <li class="nav-item level-link level-link-enterprise">
           <a class="nav-link dark active" href="chemicals.html">Enterprise</a>
@@ -69,7 +69,7 @@
           </p>
         </div>
       </div>
-      <div class="scenes-wrapper chemicals pull-up">
+      <div class="scenes-wrapper chemicals consumer-products pull-up">
         <p class="center scenes-label fade">Choose your scene:</p>
 
         <div class="scenes col-wrapper">
@@ -77,7 +77,7 @@
             <div class="box-wrapper">
               <div class="title-wrapper show-on-level">
                 <div>
-                  <h2 class="underline left">Accelerate digital transformation in your consumer product manufacturing enterprise</h2>
+                  <h2 class="underline left">Accelerate digital transformation in your consumer packaged goods enterprise</h2>
                   <p class="large">
                     At the corporate level, the top priorities for digital manufacturing in the post-pandemic environment are focused on enabling supply chain agility, sustainability, and ensuring work process standards across multiple sites.
                   </p>
@@ -111,7 +111,7 @@
             <div class="box-wrapper">
               <div class="title-wrapper show-on-level">
                 <div>
-                  <h2 class="underline left">Accelerate digital transformation in your consumer product manufacturing plant</h2>
+                  <h2 class="underline left">Accelerate digital transformation in your consumer packaged goods plant</h2>
                   <p class="large">
                     At the plant level, efficiency through continuous improvement remains a top priority, enabled by improving workforce productivity, product quality and safety, and asset reliability.
                   </p>
@@ -127,7 +127,7 @@
                       <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
                       <div class="tooltip">Improve productivity</div>
                     </div>
-                    <div class="pulse-dot downtime"  data-sidebar="downtime">
+                    <div class="pulse-dot downtime"  data-sidebar="downtime" style="top: 75%; left: 96%;">
                       <img class="dot-img" src="assets/images/dot-orange.svg" alt="">
                       <div class="tooltip">Ensure quality</div>
                     </div>
@@ -227,7 +227,16 @@
         <div class="white-section">
           <div class="top">
             <div class="sidebar-video-wrapper">
-              <!--            TODO-->
+
+
+              <div class="fitb-popup-contain" style="margin-bottom:30px;">
+                <div class="pop-trigger">
+                  <img src="assets/images/video-preview.jpg" />
+                  <div class="fitb-pop">
+                    <script src="https://fast.wistia.com/embed/medias/k7qppgsfjd.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:​56.​25% 0 0 0;position:​relative;"><div class="wistia_responsive_wrapper" style="height:​100%;left:​0;position:​absolute;top:​0;width:​100%;"><div class="wistia_embed wistia_async_k7qppgsfjd videoFoam=true" style="height:​100%;position:​relative;width:​100%"><div class="wistia_swatch" style="height:​100%;left:​0;opacity:​0;overflow:​hidden;position:​absolute;top:​0;transition:​opacity 200ms;width:​100%;"><img src="https://fast.wistia.com/embed/medias/k7qppgsfjd/swatch" style="filter:​blur(5px);height:​100%;object-fit:​contain;width:​100%;" alt="" aria-hidden="true" onload="this.​parentNode.​style.​opacity=1;" /></div></div></div></div>
+                  </div>
+                </div>
+              </div>
 
               <p class="slate">
                 Watch the interview with Lara Cecere of Supply Chain Insight.
@@ -451,5 +460,10 @@
     <script src="assets/js/match-height.js"></script>
     <script src="assets/js/la-custom.js"></script>
     <script src="assets/js/sidebar.js"></script>
+    <script>
+      jQuery(document).ready(function ($) {
+        $.cookie("last-page", "nothome", { path: '/', expires: 1 });
+      });
+    </script>
   </body>
 </html>
