more qa changes

--- a/energy.html
+++ b/energy.html
@@ -35,8 +35,8 @@
     <link rel="preload" href="assets/fonts/Muli-ExtraBold.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="assets/fonts/Muli-ExtraBold.woff" as="font" type="font/woff" crossorigin>
     <link rel="preload" href="assets/fonts/Muli-ExtraBold.ttf" as="font" type="font/ttf" crossorigin>
-    <link rel="stylesheet" type="text/css" href="assets/css/new-style.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/la-style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/new-style.css?v=1">
+    <link rel="stylesheet" type="text/css" href="assets/css/la-style.css?v=1">
 
     <title>Aveva | Oil and Gas</title>
   </head>
@@ -188,6 +188,7 @@
                   <img src="assets/images/video-preview.jpg" />
                   <div class="fitb-pop">
                     <script src="https://fast.wistia.com/embed/medias/9f4daysuna.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:42.5% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_9f4daysuna videoFoam=true" style="height:100%;position:relative;width:100%"><div class="wistia_swatch" style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;"><img src="https://fast.wistia.com/embed/medias/9f4daysuna/swatch" style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt="" aria-hidden="true" onload="this.parentNode.style.opacity=1;" /></div></div></div></div>
+                    <div class="fitb-close"><img alt="" src="assets/images/close.svg"></div>
                   </div>
                 </div>
               </div>
