--- a/consumer-products.html
+++ b/consumer-products.html
@@ -233,7 +233,8 @@
                 <div class="pop-trigger">
                   <img src="assets/images/video-preview.jpg" />
                   <div class="fitb-pop">
-                    <script src="https://fast.wistia.com/embed/medias/k7qppgsfjd.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:​56.​25% 0 0 0;position:​relative;"><div class="wistia_responsive_wrapper" style="height:​100%;left:​0;position:​absolute;top:​0;width:​100%;"><div class="wistia_embed wistia_async_k7qppgsfjd videoFoam=true" style="height:​100%;position:​relative;width:​100%"><div class="wistia_swatch" style="height:​100%;left:​0;opacity:​0;overflow:​hidden;position:​absolute;top:​0;transition:​opacity 200ms;width:​100%;"><img src="https://fast.wistia.com/embed/medias/k7qppgsfjd/swatch" style="filter:​blur(5px);height:​100%;object-fit:​contain;width:​100%;" alt="" aria-hidden="true" onload="this.​parentNode.​style.​opacity=1;" /></div></div></div></div>
+                    <script src="https://fast.wistia.com/embed/medias/k7qppgsfjd.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:​56.​25% 0 0 0;position:​relative;"><div class="wistia_responsive_wrapper" style="height:​100%;left:​0;position:​absolute;top:​0;width:​100%;"><div class="wistia_embed wistia_async_k7qppgsfjd videoFoam=true" style="height:​100%;position:​relative;width:​100%"></div></div></div>
+                    <div class="fitb-close"><img alt="" src="assets/images/close.svg"></div>
                   </div>
                 </div>
               </div>
@@ -287,7 +288,8 @@
                 <div class="pop-trigger">
                   <img src="assets/images/video-preview.jpg" />
                   <div class="fitb-pop">
-                    <script src="https://fast.wistia.com/embed/medias/9efkpmnmr3.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_9efkpmnmr3 videoFoam=true" style="height:100%;position:relative;width:100%"><div class="wistia_swatch" style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;"><img src="https://fast.wistia.com/embed/medias/9efkpmnmr3/swatch" style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt="" aria-hidden="true" onload="this.parentNode.style.opacity=1;" /></div></div></div></div>
+                    <script src="https://fast.wistia.com/embed/medias/9efkpmnmr3.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_9efkpmnmr3 videoFoam=true" style="height:100%;position:relative;width:100%"></div></div></div>
+                    <div class="fitb-close"><img alt="" src="assets/images/close.svg"></div>
                   </div>
                 </div>
               </div>
