qa changes...and design change

--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
         <div class="col col-full nav title-nav">
           <ul class="nav-list">
             <li class="nav-item">
+              <a class="nav-link dark" href="#" data-slide="splash">Home</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link dark active" href="#" data-slide="chemicals">Chemicals</a>
             </li>
             <li class="nav-item">
@@ -155,6 +158,9 @@
         </div>
         <div class="col col-full nav title-nav">
           <ul class="nav-list">
+            <li class="nav-item">
+              <a class="nav-link dark" href="#" data-slide="splash">Home</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link dark" href="#" data-slide="chemicals">Chemicals</a>
             </li>
@@ -194,6 +200,9 @@
         <div class="col col-full nav title-nav">
           <ul class="nav-list">
             <li class="nav-item">
+              <a class="nav-link dark" href="#" data-slide="splash">Home</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link dark" href="#" data-slide="chemicals">Chemicals</a>
             </li>
             <li class="nav-item">
@@ -231,6 +240,9 @@
         </div>
         <div class="col col-full nav title-nav">
           <ul class="nav-list">
+            <li class="nav-item">
+              <a class="nav-link dark" href="#" data-slide="splash">Home</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link dark" href="#" data-slide="chemicals">Chemicals</a>
             </li>
